// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`channels bootstraps default channels 1`] = `
Array [
  Object {
    "address": "ztestsapling16e4wekqjyx80yjjzf24ztyflt2c5tt6avt4nftgnj694n8e5x8fz5pr9ejsd3l9lmymf29khjnk",
    "description": "This is a general channel available to all users of Zbay by default.",
    "hash": "eJxNj0FuhDAMRa8SZU2rKQMU5gK9QFfdeYhDgGBCYphJRnP3pu2mkqVvfUv/+z0kwYLyIj+Q0IOVhXR+PICzx37HQhoIJt9pffndCglKeQwhe4kxcABnRxreGqxuOG9TvLenOE1Jl1XiqC2Xfc3cwMEVaR5oarqKWqzvrU618x1OQZ1tZ5e46LKbzURzLtnJIyh5ORVSYej96HhcKXd+mjGIPCCGv49Fb4AIrYADRgtXi4JXAdaKPaAPYtXi6wpRXKNQqGG3/JrzZ4yZ4CHHY/4ByfKfxdXelX1KbFtYwG5LPZh0GH+u6dSasjmMM3Qr783cntlrfg9boG6bVSOfz2/ANHfQ",
    "keys": "{\\"ivk\\":\\"zivktestsapling1p5rp2czztl8amalqm5ghzvhr35n08h26vhphnw2x6k83trft7sqsn9qkd6\\"}",
    "name": "General",
    "private": "1",
    "title": "ztestsapling16e4wekqjyx80yjjzf24ztyflt2c5tt6avt4nftgnj694n8e5x8fz5pr9ejsd3l9lmymf29khjnk",
    "unread": "0",
  },
]
`;

exports[`channels importChannel consecutive imports 1`] = `
Array [
  Object {
    "address": "zs1testaddress1",
    "description": "Channel about 1",
    "hash": "eJxNjTEOwjAMRa+CPCdD1q6cxDQWsUqdKk6CoOrd6wADk633vv7fgSNMwYHgSjDBNaEIPS4BHGyFO1ajtTRykFCTJSpp9eP3I4MxFlI1/tYw1A8M16QQftsj6Vx4q5zlbwRvudXP1EIv69iB+2KeZc4ry913pue4pm3tOE48Yzmm",
    "keys": "{\\"ivk\\":\\"incoming-viewing-key-1\\"}",
    "name": "Channel 1",
    "private": "1",
    "title": "zs1testaddress1",
    "unread": "1",
  },
  Object {
    "address": "zs1testaddress2",
    "description": "",
    "hash": "eJwtjEEOgzAMBL+CfE4O5ci1L7GISyzAoDhNBYi/11Z78mpmvRdwgqEPILgSDPDMKEJL10OAvXDDavSFi1KAjJqtUklr9By9hCkVUjV+6sPVH7h7SyH8zSfSsfBeeROrmpvpsKcLuM0GWMZtZZliY/r4NW3z9/0FKdQ0sg==",
    "keys": "{\\"ivk\\":\\"incoming-viewing-key-2\\"}",
    "name": "Channel 2",
    "private": "0",
    "title": "zs1testaddress2",
    "unread": "2",
  },
]
`;

exports[`channels importChannel when no group for identity 1`] = `
Object {
  "address": "zs1testaddress1",
  "description": "Channel about 1",
  "hash": "eJxNjTEOwjAMRa+CPCdD1q6cxDQWsUqdKk6CoOrd6wADk633vv7fgSNMwYHgSjDBNaEIPS4BHGyFO1ajtTRykFCTJSpp9eP3I4MxFlI1/tYw1A8M16QQftsj6Vx4q5zlbwRvudXP1EIv69iB+2KeZc4ry913pue4pm3tOE48Yzmm",
  "keys": "{\\"ivk\\":\\"incoming-viewing-key-1\\"}",
  "name": "Channel 1",
  "private": "1",
  "title": "zs1testaddress1",
  "unread": "1",
}
`;

exports[`channels importChannel when no group for identity 2`] = `
Object {
  "address": "zs1testaddress1",
  "description": "Channel about 1",
  "hash": "eJxNjTEOwjAMRa+CPCdD1q6cxDQWsUqdKk6CoOrd6wADk633vv7fgSNMwYHgSjDBNaEIPS4BHGyFO1ajtTRykFCTJSpp9eP3I4MxFlI1/tYw1A8M16QQftsj6Vx4q5zlbwRvudXP1EIv69iB+2KeZc4ry913pue4pm3tOE48Yzmm",
  "keys": "{\\"ivk\\":\\"incoming-viewing-key-1\\"}",
  "name": "Channel 1",
  "private": "1",
  "title": "zs1testaddress1",
  "unread": "1",
}
`;
